MHOptim: Clean projet code

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=ed19e8a6c9846a211b44f89bc52a6ff4
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-meta ###
