--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,8 @@
             "@auto-scripts"
         ],
         "phpstan" : "vendor/bin/phpstan analyse src tests",
-        "linter": "php vendor/bin/php-cs-fixer fix"
+        "linter": "php vendor/bin/php-cs-fixer fix",
+        "unit": "php bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
